--- a/app/about.html
+++ b/app/about.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"/>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -19,10 +21,10 @@
   
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">About</a>
+                <a class="menu__list-link menu__list-link--active" href="about.html">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Gallery</a>
+                <a class="menu__list-link" href="gallery.html">Gallery</a>
               </li>
             </ul>
           </nav>
@@ -34,10 +36,10 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Blog</a>
+                <a class="menu__list-link" href="blog.html">Blog</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="#">Contact</a>
+                <a class="menu__list-link" href="contacts.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -59,7 +61,7 @@
               <p class="rightside-menu__text">
                 Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn
               </p>
-              <img class="rightside-menu__images" src="images/rightside-img.jpg" alt="images">
+              <img class="rightside-menu__images" src="images/content/rightside-img.jpg" alt="images">
             </div>
           </div>
 
@@ -68,6 +70,171 @@
     </header>
 
     <main class="main">
+      <div class="breadcrumbs">
+        <div class="container">
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">Home</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <section class="about">
+
+        <div class="about__prev">
+          <div class="container">
+            <h2 class="about__prev-title">
+              About Us
+            </h2>
+          </div>
+        </div>
+        
+        <div class="about__content">
+          <div class="container">
+            <div class="about__title">
+              Balance in the simple through an informed marriage of design, functional and craft
+            </div>
+            <div class="about__text">
+              <p>Vexillologist vape microdosing freegan pork belly deep v direct trade cray single-origin coffee street art. Viral shaman mustache master cleanse, pour-over affogato poutine copper mug marfa fanny pack normcore. Lo-fi pop-up banjo portland, echo park hammock chillwave literally post-ironic ramps subway tile kitsch. Shaman tumblr fixie echo park street art. Enamel pin vaporware wayfarers, organic succulents hella sustainable cardigan.</p>
+              <p>Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn tilde distillery pork belly single-origin coffee tumblr quinoa copper mug. Affogato cold-pressed unicorn, viral intelligentsia leggings raw denim kombucha tote bag messenger bag chambray vape coloring book scenester. Activated charcoal wayfarers church-key tote bag synth brunch. Retro cornhole</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="about__popup">
+          <a class="about__popup-play" href="https://youtu.be/fpSTWBH9boo" data-fancybox>
+            <img class="about__popup-imgbtn" src="images/play_button.svg" alt="image">
+          </a>
+        </div>
+
+      </section>
+
+      <section class="inspiration">
+        <div class="container-fluid">
+          <div class="inspiration__inner">
+            <img class="inspiration__images" src="images/inspiration-decor.png" alt="images">
+            <div class="inspiration__content">
+              <h3 class="inspiration__title">
+                Our Inspiration in details
+              </h3>
+              <p class="inspiration__text">
+                Semiotics fixie four dollar toast, next level woke scenester direct trade photo booth helvetica jean shorts. Fanny pack church-key cornhole, banh mi thundercats gochujang keytar.
+              </p>
+              <ul class="inspiration__list">
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Design and technical drawings</p>
+                    <p class="inspiration__num">80%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 80%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Measurments</p>
+                    <p class="inspiration__num">70%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 70%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Furniture functionality analysis</p>
+                    <p class="inspiration__num">75%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 75%;"></div>
+                </li>
+                <li class="inspiration__item">
+                  <div class="inspiration__item-content">
+                    <p class="inspiration__item-text">Interior visualization</p>
+                    <p class="inspiration__num">40%</p>
+                  </div>
+                  <div class="inspiration__line" style="width: 40%;"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="partners">
+        <div class="container-fluid">
+          <div class="partners__items">
+            <img class="partners__item" src="images/logos/1.png" alt="images">
+            <img class="partners__item" src="images/logos/2.png" alt="images">
+            <img class="partners__item" src="images/logos/3.png" alt="images">
+            <img class="partners__item" src="images/logos/4.png" alt="images">
+            <img class="partners__item" src="images/logos/5.png" alt="images">
+          </div>
+        </div>
+      </div>
+
+      <div class="container-fluid">
+        <div class="collection">
+
+          <a class="collection__item" href="#">
+            <img class="collection__images" src="images/content/collection-1.jpg" alt="images">
+            <div class="collection__info">
+              <h6 class="collection__info-title">
+                Truffaut literally trust
+              </h6>
+              <p class="collection__info-text">
+                Living room furntiture | Chair
+              </p>
+            </div>
+          </a>
+  
+          <a class="collection__item" href="#">
+            <img class="collection__images" src="images/content/collection-2.jpg" alt="images">
+            <div class="collection__info">
+              <h6 class="collection__info-title">
+                Truffaut literally trust
+              </h6>
+              <p class="collection__info-text">
+                Living room furntiture | Chair
+              </p>
+            </div>
+          </a>
+  
+          <a class="collection__item" href="#">
+            <img class="collection__images" src="images/content/collection-3.jpg" alt="images">
+            <div class="collection__info">
+              <h6 class="collection__info-title">
+                Truffaut literally trust
+              </h6>
+              <p class="collection__info-text">
+                Living room furntiture | Chair
+              </p>
+            </div>
+          </a>
+  
+          <a class="collection__item" href="#">
+            <img class="collection__images" src="images/content/collection-4.jpg" alt="images">
+            <div class="collection__info">
+              <h6 class="collection__info-title">
+                Truffaut literally trust
+              </h6>
+              <p class="collection__info-text">
+                Living room furntiture | Chair
+              </p>
+            </div>
+          </a>
+  
+          <a class="collection__item" href="#">
+            <img class="collection__images" src="images/content/collection-5.jpg" alt="images">
+            <div class="collection__info">
+              <h6 class="collection__info-title">
+                Truffaut literally trust
+              </h6>
+              <p class="collection__info-text">
+                Living room furntiture | Chair
+              </p>
+            </div>
+          </a>
+  
+        </div>
+      </div>
 
     </main>
 
@@ -83,7 +250,7 @@
               <p class="footer__info-text">
                 Keffiyeh poutine etsy, paleo cray put a bird on it microdosing <br> schlitz  you probably occupy
               </p>
-              <a class="footer__info-email" href="mailto:ouremailaddress@email.com" >
+              <a class="info-email" href="mailto:ouremailaddress@email.com" >
                 ouremailaddress@email.com
               </a>
               <form class="footer__form" action="">
@@ -139,9 +306,8 @@
 
   </div>
 
-
-
   <script src="js/main.min.js"></script>
+  
 </body>
 
 </html>
