--- a/app/gallery.html
+++ b/app/gallery.html
@@ -22,7 +22,7 @@
                 <a class="menu__list-link" href="about.html">About</a>
               </li>
               <li class="menu__list-item">
-                <a class="menu__list-link" href="gallery.html">Gallery</a>
+                <a class="menu__list-link menu__list-link--active" href="#">Gallery</a>
               </li>
             </ul>
           </nav>
@@ -34,7 +34,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__list-item">
-                <a class="menu__list-link" href="blog.html">Blog</a>
+                <a class="menu__list-link" href="#">Blog</a>
               </li>
               <li class="menu__list-item">
                 <a class="menu__list-link" href="contacts.html">Contact</a>
@@ -68,176 +68,20 @@
     </header>
 
     <main class="main">
-      <section class="top">
-        <div class="top__inner">
-          <div class="top__slider">
-
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/content/slider-img.png" alt="image" >
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Furniture <br> collection
-                </h2>
-                <p class="top__slider-text">
-                  Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                </p>
-              </div>
-            </div>
-
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/content/slider-img.png" alt="image" >
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Furniture <br> collection
-                </h2>
-                <p class="top__slider-text">
-                  Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                </p>
-              </div>
-            </div>
-            
-            <div class="top__slider-item">
-              <img class="top__slider-img" src="images/content/slider-img.png" alt="image" >
-              <div class="top__slider-info">
-                <h2 class="top__slider-title">
-                  Furniture <br> collection
-                </h2>
-                <p class="top__slider-text">
-                  Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
-                </p>
-              </div>
-            </div>
-
-          </div>
-        </div>
-      </section>
-
-      <section class="new-collection">
-        <div class="container-fluid">
-          <h3 class="new-collection__title">
-            Furniture new collection
-          </h3>
-          <p class="new-collection__text">
-            Deep v you probably haven't heard of them banh mi synth actually affogato. Aesthetic lyft ethical drinking vinegar austint
-          </p>
-          <div class="collection">
-
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection-1.jpg" alt="images">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection-2.jpg" alt="images">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection-3.jpg" alt="images">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection-4.jpg" alt="images">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-
-            <a class="collection__item" href="#">
-              <img class="collection__images" src="images/content/collection-5.jpg" alt="images">
-              <div class="collection__info">
-                <h6 class="collection__info-title">
-                  Truffaut literally trust
-                </h6>
-                <p class="collection__info-text">
-                  Living room furntiture | Chair
-                </p>
-              </div>
-            </a>
-
-          </div>
-        </div>
-      </section>
-
-      <section class="decor">
+      <div class="breadcrumbs">
         <div class="container">
-          <h2 class="decor__title">Aesthetic ethical drinking</h2>
-          <p class="decor__text">
-            Deep v you probably haven't heard of them banh mi synth actually affogato. Artlyft ethical the one drinking vinegar austint
-          </p>
+          <ul class="breadcrumbs__list">
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="index.html">Home</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a class="breadcrumbs__link" href="#">Gallery</a>
+            </li>
+          </ul>
         </div>
-      </section>
+      </div>
 
-      <section class="works-path">
-        <div class="container">
-          <h3 class="works-path__title">
-            How it works
-          </h3>
-          <div class="works-path__items">
-
-            <div class="works-path__items-box">
-              <div class="works-path__item works-path__item--consultation">
-                <img class="works-path__item-img" src="images/icon/works-path-1.svg" alt="icon" >
-                <h6 class="works-path__item-title">
-                  Designer Consultation
-                </h6>
-                <p class="works-path__item-text">
-                  Kinfolk scenester authentic craft beer truffaut irony intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
-                </p>
-              </div>
-
-              <div class="works-path__item works-path__item--production">
-                <img class="works-path__item-img" src="images/icon/works-path-2.svg" alt="icon" >
-                <h6 class="works-path__item-title">
-                  Production
-                </h6>
-                <p class="works-path__item-text">
-                  Everyday carry actually neutra authentic kogi shabby chic
-                </p>
-              </div>
-            </div>
-
-            <div class="works-path__item works-path__item--measuring">
-              <img class="works-path__item-img" src="images/icon/works-path-3.svg" alt="icon" >
-              <h6 class="works-path__item-title">
-                Measurements
-              </h6>
-              <p class="works-path__item-text">
-                Intelligentsia YOLO lomo bushwick coloring book. Semiotics man bun venmo viral cliche
-              </p>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <div class="gallery">
+      <div class="gallery gallery-page">
         <div class="container-fluid">
           <div class="gallery__buttons">
             <button class="gallery__btn" data-filter=".bedroom">Bedroom furniture</button>
@@ -264,14 +108,32 @@
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
               </a>
-            </div>
-
-            <div class="gallery__items mix living">
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
+              </a>
+            </div>
+
+            <div class="gallery__items mix living">
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
@@ -281,15 +143,30 @@
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
               </a>
             </div>
 
             <div class="gallery__items mix office">
               <a  class="gallery__item" href="">
-                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
@@ -299,15 +176,30 @@
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
               </a>
             </div>
 
             <div class="gallery__items mix dining">
               <a  class="gallery__item" href="">
-                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
@@ -317,15 +209,30 @@
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
               </a>
             </div>
 
             <div class="gallery__items mix chair">
               <a  class="gallery__item" href="">
-                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+                <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
@@ -335,65 +242,24 @@
               </a>
               <a  class="gallery__item" href="">
                 <img class="gallery__item-img" src="images/gallery/5.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/2.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/1.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/3.jpg" alt="images" >
+              </a>
+              <a  class="gallery__item" href="">
+                <img class="gallery__item-img" src="images/gallery/4.jpg" alt="images" >
               </a>
             </div>
 
           </div>
         </div>
       </div>
-
-      <section class="blog-box">
-        <div class="container">
-          <h3 class="blog-box__title">
-            More inspiration ideas in our blog
-          </h3>
-          <div class="blog-box__items">
-            <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#">
-                <img class="blog-box__img" src="images/blogpost/img-1.jpg" alt="image">
-              </a>
-              <div class="blog-box__links">
-                <span class="blog-box__date">
-                  March 12, 2020 
-                </span> | 
-                <a class="blog-box__author" href="#">
-                  by Ann Summers 
-                </a> | 
-                <a class="blog-box__theme" href="#">
-                  Inrerior 
-                </a>
-              </div>
-              <a class="blog-box__item-titlelink" href="">
-                <h4 class="blog-box__item-title">
-                  Listicle actually selvage activated charcoal for the drinking vinegar 
-                </h4>
-              </a>
-            </div>
-            <div class="blog-box__item">
-              <a class="blog-box__img-link" href="#">
-                <img class="blog-box__img" src="images/blogpost/img-2.jpg" alt="image">
-              </a>
-              <div class="blog-box__links">
-                <span class="blog-box__date">
-                  September 28,2020    
-                </span> |
-                <a class="blog-box__author" href="#">
-                  by Finnagan Morningstar
-                </a> |
-                <a class="blog-box__theme" href="#">
-                  Dining room interior
-                </a>
-              </div>
-              <a class="blog-box__item-titlelink" href="">
-                <h4 class="blog-box__item-title">
-                  Red selfies edison bulb four dollar toast humblebrag
-                </h4>
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-
     </main>
 
     <footer class="footer">
