--- a/app/blog.html
+++ b/app/blog.html
@@ -49,6 +49,12 @@
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
           
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
               <img src="images/close.svg" alt="close" class="close">
@@ -84,7 +90,7 @@
         </div>
       </div>
 
-      <section class="blog">
+      <section class="blog"> 
         <div class="container">
           <div class="blog__inner">
 
