--- a/app/gallery.html
+++ b/app/gallery.html
@@ -46,6 +46,12 @@
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
           
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
               <img src="images/close.svg" alt="close" class="close">
@@ -259,7 +265,7 @@
 
           </div>
         </div>
-      </div>
+      </div> 
     </main>
 
     <footer class="footer">
