--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,12 @@
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
+
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
@@ -368,7 +374,7 @@
                   Listicle actually selvage activated charcoal for the drinking vinegar 
                 </h4>
               </a>
-            </div>
+            </div> 
             <div class="blog-box__item">
               <a class="blog-box__img-link" href="#">
                 <img class="blog-box__img" src="images/blogpost/img-2.jpg" alt="image">
