--- a/app/about.html
+++ b/app/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
@@ -46,6 +46,12 @@
   
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon menu">
+          </button>
+
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
           </button>
           
           <div class="rightside-menu rightside-menu--close">
