--- a/app/contacts.html
+++ b/app/contacts.html
@@ -45,6 +45,12 @@
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
+
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
@@ -81,7 +87,7 @@
         </div>
       </div>
 
-      <div class="map">
+      <div class="map"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17836.356881019245!2d-122.44845049355617!3d37.78881582545021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580e839d7e541%3A0xf89b6220c55337a7!2zR3JlZW4gU3QsIFNhbiBGcmFuY2lzY28sIENBIDk0MTMzLCDQodCo0JA!5e0!3m2!1sru!2sth!4v1692356929249!5m2!1sru!2sth" width="100%" height="578" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
