--- a/app/page.html
+++ b/app/page.html
@@ -45,6 +45,12 @@
           <button class="header__btn">
             <img src="images/icon_menu.svg" alt="icon menu">
           </button>
+
+          <button class="header__btn-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
           
           <div class="rightside-menu rightside-menu--close">
             <button class="rightside-menu__close">
@@ -59,7 +65,7 @@
               <p class="rightside-menu__text">
                 Sustainable hot chicken skateboard, dreamcatcher meggings actually squid. Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn
               </p>
-              <img class="rightside-menu__images" src="images/rightside-img.jpg" alt="images">
+              <img class="rightside-menu__images" src="images/content/rightside-img.jpg" alt="images">
             </div>
           </div>
 
@@ -92,7 +98,7 @@
                 Contact Us
               </h6>
               <p class="footer__info-text">
-                Keffiyeh poutine etsy, paleo cray put a bird on it microdosing <br> schlitz  you probably occupy
+                Keffiyeh poutine etsy, paleo cray put a bird on it microdosing  schlitz  you probably occupy
               </p>
               <a class="info-email" href="mailto:ouremailaddress@email.com" >
                 ouremailaddress@email.com
